Updated some publications

--- a/academic.html
+++ b/academic.html
@@ -81,13 +81,13 @@
         <li>C.E. Larson, N. Van Cleemput, <i>Forcing independence</i>, Croat. Chem. Acta <b>86</b> (4), 2013, pp. 469-475 (<a href="http://dx.doi.org/10.5562/cca2295">DOI</a>), <a href="http://public.carnet.hr/ccacaa/prev.html">(link)</a> or <a href="http://hrcak.srce.hr/index.php?show=clanak&amp;id_clanak_jezik=166555">(direct link)</a></li>
         <li>G. Brinkmann, J. Goedgebeur, N. Van Cleemput, <i>The history of the generation of cubic graphs</i>, International Journal of Chemical Modeling, 5(2-3), 2013, pp. 67-89.</li>
         <li>Y. Akama, N. Van Cleemput, <i>Spherical tilings by congruent quadrangles: Forbidden cases and substructures</i>, Ars Mathematica Contemporanea <b>8</b> (2), 2015, pp. 297-318 (<a href="http://amc-journal.eu/index.php/amc/article/view/581">link</a>).</li>
+        <li>I. Alth&ouml;fer, J.K. Haugland, K. Scherer, F. Schneider, N. Van Cleemput, <i>Alternating Plane Graphs</i>, Ars Mathematica Contemporanea <b>8</b> (2), 2015, pp. 337-363 (<a href="http://amc-journal.eu/index.php/amc/article/view/584">link</a>).</li>
         <li>G. Brinkmann, C.E. Larson, J. Souffriau, N. Van Cleemput, <i>Construction of planar 4-connected triangulations</i>, Ars Mathematica Contemporanea <b>9</b> (2), 2015, pp. 145-159 (<a href="http://amc-journal.eu/index.php/amc/article/view/459">link</a>).</li>
-        <li>I. Alth&ouml;fer, J.K. Haugland, K. Scherer, F. Schneider, N. Van Cleemput, <i>Alternating Plane Graphs</i>, to appear in Ars Mathematica Contemporanea.</li>
+        <li>T. Kaiser, M. Saumell, N. Van Cleemput, <i>10-Gabriel graphs are Hamiltonian</i>, to appear in Information Processing Letters (<a href="http://dx.doi.org/10.1016/j.ipl.2015.05.013">DOI</a>).</li>
         <li>N. Van Cleemput, <i>Generation of Delaney-Dress graphs</i>, submitted.</li>
         <li>C.E. Larson, N. Van Cleemput, <i>Automated Conjecture-making: Fajtlowicz's Dalmatian Heuristic Revisited</i>, submitted.</li>
         <li>G. Brinkmann, J. Souffriau, N. Van Cleemput, <i>On the strongest form of a theorem of Whitney for hamiltonian cycles in plane triangulations</i>, submitted.</li>
         <li>G. Brinkmann, J. Souffriau, N. Van Cleemput, <i>On the number of hamiltonian cycles in triangulations with few separating triangles</i>, submitted.</li>
-        <li>T. Kaiser, M. Saumell, N. Van Cleemput, <i>10-Gabriel graphs are Hamiltonian</i>, submitted.</li>
 </ul>
 
 <h2>PhD thesis</h2>
