Added course on structure generation

--- a/academic.html
+++ b/academic.html
@@ -57,6 +57,7 @@
 	<li><b>Programming</b> (Python) (exercises for the bachelors biochemistry/biotechnology, chemistry, geology and geography) (2011 - 2013)</li>
 	<li><b>Programming (I)</b> (Java) (exercises for the bachelors computer science, mathematics and physics) (2014 - present) </li>
 	<li><b>Analysis I</b> (for the bachelors computer science) (2015 - present)</li>
+  <li><b>Structure generation</b>: a four-part course on structure generation taught at University of West-Bohemia during 2014-2015.</li>
 </ul>
 
 <h2>Research interest</h2>
