--- a/academic.html
+++ b/academic.html
@@ -85,7 +85,7 @@
         <li>I. Alth&ouml;fer, J.K. Haugland, K. Scherer, F. Schneider, N. Van Cleemput, <i>Alternating Plane Graphs</i>, Ars Mathematica Contemporanea <b>8</b> (2), 2015, pp. 337-363 (<a href="http://amc-journal.eu/index.php/amc/article/view/584">link</a>).</li>
         <li>G. Brinkmann, C.E. Larson, J. Souffriau, N. Van Cleemput, <i>Construction of planar 4-connected triangulations</i>, Ars Mathematica Contemporanea <b>9</b> (2), 2015, pp. 145-159 (<a href="http://amc-journal.eu/index.php/amc/article/view/459">link</a>).</li>
         <li>T. Kaiser, M. Saumell, N. Van Cleemput, <i>10-Gabriel graphs are Hamiltonian</i>, Information Processing Letters <b>115</b>, 2015, pp. 877-881 (<a href="http://dx.doi.org/10.1016/j.ipl.2015.05.013">DOI</a>).</li>
-        <li>N. Van Cleemput, <i>Generation of Delaney-Dress graphs</i>, submitted.</li>
+        <li>N. Van Cleemput, <i>Generation of Delaney-Duress graphs</i>, submitted.</li>
         <li>C.E. Larson, N. Van Cleemput, <i>Automated Conjecturing I: Fajtlowicz's Dalmatian Heuristic Revisited</i>, submitted.</li>
         <li>G. Brinkmann, J. Souffriau, N. Van Cleemput, <i>On the strongest form of a theorem of Whitney for hamiltonian cycles in plane triangulations</i>, submitted.</li>
         <li>G. Brinkmann, J. Souffriau, N. Van Cleemput, <i>On the number of hamiltonian cycles in triangulations with few separating triangles</i>, submitted.</li>
@@ -121,6 +121,9 @@
 	<li>Graph theory seminar (Pilsen, Czech Republic, 19/11/'13): Hamiltonian cycles in triangulations: <a href="slidesseminar20131119.pdf">Slides</a></li>
 	<li>Graph theory seminar (Pilsen, Czech Republic, 25/02/'14): Structure generation: <a href="slidesseminar20140225.pdf">Slides</a></li>
 	<li>ICGT 2014 (Grenoble, France, 30/06/'14 - 04/07/'14): On the strongest form of a theorem of Whitney for hamiltonian cycles in plane triangulations: <a href="slidesicgt2014.pdf">Slides</a></li>
+  <li>CAAGT seminar (Ghent, Belgium, ): Conway's Thrackle Conjecture (black board presentation)</li>
+  <li>CAAGT seminar (Ghent, Belgium, ): Generation of Delaney-Dress symbols (black board presentation)</li>
+  <li>Computers in Scientific Discovery 7 (Richmond, USA, 19-23/07/'15): Classification and generation of nanocones (invited talk): <a href="slidescsd7.pdf">Slides</a></li>
 </ul>
 
 <h2>Posters</h2>
