Updated information about CAAGT seminar talks

--- a/academic.html
+++ b/academic.html
@@ -121,9 +121,9 @@
 	<li>Graph theory seminar (Pilsen, Czech Republic, 19/11/'13): Hamiltonian cycles in triangulations: <a href="slidesseminar20131119.pdf">Slides</a></li>
 	<li>Graph theory seminar (Pilsen, Czech Republic, 25/02/'14): Structure generation: <a href="slidesseminar20140225.pdf">Slides</a></li>
 	<li>ICGT 2014 (Grenoble, France, 30/06/'14 - 04/07/'14): On the strongest form of a theorem of Whitney for hamiltonian cycles in plane triangulations: <a href="slidesicgt2014.pdf">Slides</a></li>
-  <li>CAAGT seminar (Ghent, Belgium, ): Conway's Thrackle Conjecture (black board presentation)</li>
-  <li>CAAGT seminar (Ghent, Belgium, ): Generation of Delaney-Dress symbols (black board presentation)</li>
-  <li>Computers in Scientific Discovery 7 (Richmond, USA, 19-23/07/'15): Classification and generation of nanocones (invited talk): <a href="slidescsd7.pdf">Slides</a></li>
+    <li>CAAGT seminar (Ghent, Belgium, 08/12/'14): Conway's Thrackle Conjecture (black board presentation)</li>
+    <li>CAAGT seminar (Ghent, Belgium, 27/03/'15, 03/04/'15, 17/04/'15): Generation of Delaney-Dress symbols (black board presentation in three parts)</li>
+    <li>Computers in Scientific Discovery 7 (Richmond, USA, 19-23/07/'15): Classification and generation of nanocones (invited talk): <a href="slidescsd7.pdf">Slides</a></li>
 </ul>
 
 <h2>Posters</h2>
