Added talk at Cycles and Colourings 2015

--- a/academic.html
+++ b/academic.html
@@ -124,6 +124,7 @@
     <li>CAAGT seminar (Ghent, Belgium, 08/12/'14): Conway's Thrackle Conjecture (black board presentation)</li>
     <li>CAAGT seminar (Ghent, Belgium, 27/03/'15, 03/04/'15, 17/04/'15): Generation of Delaney-Dress symbols (black board presentation in three parts)</li>
     <li>Computers in Scientific Discovery 7 (Richmond, USA, 19-23/07/'15): Classification and generation of nanocones (invited talk): <a href="slidescsd7.pdf">Slides</a></li>
+    <li>Cycles and Colourings 2015 (Novy Smokovec, Slovakia, 07-11/09/'15): On the number of hamiltonian cycles in triangulations with few separating triangles: <a href="slidesCandC2015.pdf">Slides</a></li>
 </ul>
 
 <h2>Posters</h2>
