Updated Pilsen position

--- a/academic.html
+++ b/academic.html
@@ -44,7 +44,7 @@
 <ul>
 	<li>August 2006 - September 2007 : co-worker of <a href="http://www.grinvin.org" target="_new">GrInvIn</a>-project at Ghent University</li>
 	<li>October 2007 - September 2013: Research assistent at Ghent University</li>
-	<li>November 2013 - present: Research Assistant (postdoc) at University of West Bohemia</li>
+	<li>November 2013 - December 2014: Research Assistant (postdoc) at University of West Bohemia</li>
 	<li>September 2014 - present: Post-doctoral assistant at Ghent University</li>
 </ul>
 
