Added some interests

--- a/academic.html
+++ b/academic.html
@@ -69,6 +69,7 @@
 <li>Development of tools for graph theory</li>
 <li>General (graph) generation algorithms</li>
 <li>Graph theory</li>
+<li>Hamiltonicity and related properties</li>
 </ul>
 
 <h2>Publications</h2>
