--- a/academic.html
+++ b/academic.html
@@ -87,7 +87,7 @@
         <li>G. Brinkmann, C.E. Larson, J. Souffriau, N. Van Cleemput, <i>Construction of planar 4-connected triangulations</i>, Ars Mathematica Contemporanea <b>9</b> (2), 2015, pp. 145-159 (<a href="http://amc-journal.eu/index.php/amc/article/view/459">link</a>).</li>
         <li>T. Kaiser, M. Saumell, N. Van Cleemput, <i>10-Gabriel graphs are Hamiltonian</i>, Information Processing Letters <b>115</b>, 2015, pp. 877-881 (<a href="http://dx.doi.org/10.1016/j.ipl.2015.05.013">DOI</a>).</li>
         <li>C.E. Larson, N. Van Cleemput, <i>Automated Conjecturing I: Fajtlowicz's Dalmatian Heuristic Revisited</i>, Artificial Intelligence <b>231</b>, 2016, pp. 17-38.</li>
-        <li>G. Brinkmann, J. Souffriau, N. Van Cleemput, <i>On the strongest form of a theorem of Whitney for hamiltonian cycles in plane triangulations</i>, to appear in Journal of Graph Theory (<a href="http://dx.doi.org/10.1002/jgt.21915">DOI</a>).</li>
+        <li>G. Brinkmann, J. Souffriau, N. Van Cleemput, <i>On the strongest form of a theorem of Whitney for hamiltonian cycles in plane triangulations</i>, Journal of Graph Theory <b>83</b> (1), 2016, pp. 78-91 (<a href="http://dx.doi.org/10.1002/jgt.21915">DOI</a>).</li>
         <li>G. Brinkmann, J. Souffriau, N. Van Cleemput, <i>On the number of hamiltonian cycles in triangulations with few separating triangles</i>, submitted.</li>
         <li>N. Van Cleemput, <i>Generation of Delaney-Dress graphs</i>, submitted.</li>
         <li>N. Van Cleemput, <i>Hamiltonian-connectedness of triangulations with few separating triangles</i>, submitted.</li>
