New academic section for the website

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <p style="text-align: center">
 <a href="http://nvcleemp.wordpress.com">Blog</a><br />
-<a href="academic.html">Academic</a><br />
+<a href="academic/index.html">Academic</a><br />
 <a href="http://github.com/nvcleemp">GitHub</a>
 </p>
 </body>
