Added title and link for thesis Karen

--- a/academic/index.html
+++ b/academic/index.html
@@ -145,7 +145,7 @@ Students I supervised or co-supervised.
 <ul>
 <li>Pieter Goetschalckx (2014 - present)</li>
 <li>Thomas De Praetere, M.S. (2015 - 2016): <a href="http://lib.ugent.be/catalog/rug01:002272640" target="_blank">Drie-dimensionale symmetrische inbedding van grafen</a></li>
-<li>Karen Hilgert, M.S. (2016 - 2017)</li>
+<li>Karen Hilgert, M.S. (2016 - 2017): <a href="https://lib.ugent.be/en/catalog/rug01:002349869" target="_blank">Algoritmes voor het testen van printplaten</a></li>
 </ul>
 Students for whom I assisted the thesis.
 <ul>
