Added recent visit to Richmond

--- a/academic/index.html
+++ b/academic/index.html
@@ -294,6 +294,7 @@ Students for whom I assisted the thesis.
               <li>visit to UCLA to work with Stan Schein (Los Angeles, CA, United States, 23/01/2016 - 05/02/2016)</li>
               <li>visit to VCU to work with Craig Larson (Richmond, VA, United States, 25/03/2016 - 15/03/2016)</li>
               <li>visit to UCLA to work with Stan Schein (Los Angeles, CA, United States, 19/01/2017 - 27/01/2017)</li>
+              <li>visit to VCU to work with Craig Larson (Richmond, VA, United States, 03/09/2017 - 14/09/2017)</li>
           </ul>
         </div>
           </section>
