--- a/academic/index.html
+++ b/academic/index.html
@@ -173,6 +173,8 @@ Students for whom I assisted the thesis.
             <div class="mdl-cell mdl-cell--12-col">
               <h4>Publications</h4>
               <ol reversed>
+                <li>G. Brinkmann, K. Ozeki, N. Van Cleemput, <i>Types of triangle and the impact on domination and k-walks</i>, submitted.</li>
+                <li>N. Van Cleemput, C. Zamfirescu, <i>Regular Non-Hamiltonian Polyhedral Graphs</i>, submitted.</li>
                 <li>K. Ozeki, N. Van Cleemput, C. Zamfirescu, <i>Hamiltonian properties in plane graphs with few 3-cuts - a survey</i>, submitted.</li>
                 <li>N. Van Cleemput, <i>Hamiltonian-connectedness of triangulations with few separating triangles</i>, submitted.</li>
                 <li>N. Van Cleemput, <i>Generation of Delaney-Dress graphs</i>, submitted.</li>
