Added Kolkom 2017 conference

--- a/academic/index.html
+++ b/academic/index.html
@@ -253,6 +253,7 @@ Students for whom I assisted the thesis.
     <li>Colloquium on Combinatorics (Paderborn, Germany, 4-5/11/2016): On the number of hamiltonian cycles in triangulations with few separating triangles: <a href="docs/abstracts/kolkom16.pdf" target="_blank">Abstract</a>/<a href="docs/slides/kolkom16.pdf" target="_blank">Slides</a>/<a href="docs/slides/kolkom16_handouts.pdf" target="_blank">Handouts</a></li>
     <li>CAAGT seminar (Ghent, Belgium, 28/04/2017): Type-0 triangles: <a href="docs/slides/caagt20170428.pdf" target="_blank">Slides</a>/<a href="docs/slides/caagt20170428_handouts.pdf" target="_blank">Handouts</a></li>
     <li>Computers in Scientific Discovery 8 (Mons, Belgium, 23-25/08/2017): Non-hamiltonian and non-traceable regular 3-connected planar graphs: <a href="docs/abstracts/CSD8.pdf" target="_blank">Abstract</a>/<a href="docs/slides/CSD8.pdf" target="_blank">Slides</a>/<a href="docs/slides/CSD8_handouts.pdf" target="_blank">Handouts</a></li>
+    <li>Colloquium on Combinatorics (Paderborn, Germany, 24-25/11/2017): Non-hamiltonian and non-traceable regular 3-connected planar graphs: <a href="docs/abstracts/kolkom17.pdf" target="_blank">Abstract</a>/<a href="docs/slides/kolkom17.pdf" target="_blank">Slides</a>/<a href="docs/slides/kolkom17_handouts.pdf" target="_blank">Handouts</a></li>
 </ul>
             </div>
             <div class="mdl-cell mdl-cell--12-col">
