Updated details of some publications.

--- a/academic/index.html
+++ b/academic/index.html
@@ -175,10 +175,10 @@ Students for whom I assisted the thesis.
               <ol reversed>
                 <li>G. Brinkmann, K. Ozeki, N. Van Cleemput, <i>Types of triangle and the impact on domination and k-walks</i>, submitted.</li>
                 <li>N. Van Cleemput, C. Zamfirescu, <i>Regular Non-Hamiltonian Polyhedral Graphs</i>, submitted.</li>
-                <li>K. Ozeki, N. Van Cleemput, C. Zamfirescu, <i>Hamiltonian properties in plane graphs with few 3-cuts - a survey</i>, submitted.</li>
-                <li>N. Van Cleemput, <i>Hamiltonian-connectedness of triangulations with few separating triangles</i>, submitted.</li>
                 <li>N. Van Cleemput, <i>Generation of Delaney-Dress graphs</i>, submitted.</li>
-                <li>L. Hutchinson, V. Kamat, C. E. Larson, S. Mehta, D. Muncy, and N. Van Cleemput, <i>Automated Conjecturing VI: Domination Number of Benzenoids</i>, to appear in MATCH Commun. Math. Comput. Chem.</li>
+                <li>K. Ozeki, N. Van Cleemput, C. Zamfirescu, <i>Hamiltonian properties in plane graphs with few 3-cuts - a survey</i>, to appear in Discrete Mathematics.</li>
+                <li>N. Van Cleemput, <i>Hamiltonian-connectedness of triangulations with few separating triangles</i>, to appear in Contributions to Discrete Mathematics.</li>
+                <li>L. Hutchinson, V. Kamat, C. E. Larson, S. Mehta, D. Muncy, and N. Van Cleemput, <i>Automated Conjecturing VI: Domination Number of Benzenoids</i>, MATCH Commun. Math. Comput. Chem., <b>80</b>(3), 2018, pp. 821-834.</li>
                 <li>G. Brinkmann, J. Souffriau, N. Van Cleemput, <i>On the number of hamiltonian cycles in triangulations with few separating triangles</i>, Journal of Graph Theory <b>87</b> (2), 2018, pp. 164-175 (<a href="http://dx.doi.org/10.1002/jgt.22149">DOI</a>).</li>
                 <li>C.E. Larson, N. Van Cleemput, <i> Automated Conjecturing I: Fajtlowicz's Dalmatian Heuristic Revisited (Extended Abstract)</i>, Proceedings of the 2017 International Joint Conference on Artificial Intelligence (IJCAI-17), Melbourne. </li>
                 <li>C.E. Larson, N. Van Cleemput, <i>Automated Conjecturing III: Property-relations conjectures</i>, Annals of Mathematics and Artificial Intelligence, <b>81</b> (3), 2017, pp. 315-327 (<a href="http://dx.doi.org/10.1007/s10472-017-9559-5">DOI</a>).</li>
