--- a/academic/index.html
+++ b/academic/index.html
@@ -173,11 +173,16 @@ Students for whom I assisted the thesis.
             <div class="mdl-cell mdl-cell--12-col">
               <h4>Publications</h4>
               <ol reversed>
-                <li>G. Brinkmann, K. Ozeki, N. Van Cleemput, <i>Types of triangle and the impact on domination and k-walks</i>, submitted.</li>
-                <li>N. Van Cleemput, C. Zamfirescu, <i>Regular Non-Hamiltonian Polyhedral Graphs</i>, submitted.</li>
-                <li>N. Van Cleemput, <i>Generation of Delaney-Dress graphs</i>, submitted.</li>
-                <li>K. Ozeki, N. Van Cleemput, C. Zamfirescu, <i>Hamiltonian properties in plane graphs with few 3-cuts - a survey</i>, to appear in Discrete Mathematics.</li>
+                <li class="not-accepted">E. Van Nieuwenhuyse, T. Strisciuglio, G. Lorenzo, M. El Haddad, J. Goedgebeur, N. Van Cleemput, J. De Neve, A.V. Panfilov, S. Knecht, M. Duytschaever, N. Vandersickel, <i>Network theory as a novel way to analyze cardiac arrhythmias: accuracy of directed graph mapping in the in-silico model and clinical setting</i>, submitted.</li>
+                <li class="not-accepted">K. Coolsaet, P. Goetschalckx, N. Van Cleemput, <i>Generation of Local Symmetry-Preserving Operations on Polyhedra</i>, submitted.</li>
+                <li class="not-accepted">O.-H. S. Lo, J. M. Schmidt, N. Van Cleemput, C. T. Zamfirescu, <i>Shortness Coefficient of Cyclically 4-Edge-Connected Cubic Graphs</i>, submitted.</li>
+                <li class="not-accepted">A. Bradford, J. K. Day, L. Hutchinson,  B. Kaperick, C. E. Larson, M. Mills, D. Muncy,  N. Van Cleemput, <i>Automated Conjecturing II: Chomp and Reasoned Game Play</i>, submitted.</li>
+                <li class="not-accepted">J. Goedgebeur, K. Ozeki, N. Van Cleemput, G. Wiener, <i>On the minimum leaf number of cubic graphs</i>, submitted.</li>
+                <li class="not-accepted">N. Van Cleemput, <i>Generation of Delaney-Dress graphs</i>, submitted.</li>
+                <li>G. Brinkmann, K. Ozeki, N. Van Cleemput, <i>Types of triangle in plane Hamiltonian triangulations and applications to domination and k-walks</i>, to appear in Ars Mathematica Contemporanea.</li>
                 <li>N. Van Cleemput, <i>Hamiltonian-connectedness of triangulations with few separating triangles</i>, to appear in Contributions to Discrete Mathematics.</li>
+                <li>N. Van Cleemput, C. T. Zamfirescu, <i>Regular Non-Hamiltonian Polyhedral Graphs</i>, Applied Mathematics and Computation, 338, 2018, pp. 192-206.</li>
+                <li>K. Ozeki, N. Van Cleemput, C. T. Zamfirescu, <i>Hamiltonian properties in plane graphs with few 3-cuts - a survey</i>, Discrete Mathematics 341 (9), 2018, pp. 2646-2660.</li>
                 <li>L. Hutchinson, V. Kamat, C. E. Larson, S. Mehta, D. Muncy, and N. Van Cleemput, <i>Automated Conjecturing VI: Domination Number of Benzenoids</i>, MATCH Commun. Math. Comput. Chem., <b>80</b>(3), 2018, pp. 821-834.</li>
                 <li>G. Brinkmann, J. Souffriau, N. Van Cleemput, <i>On the number of hamiltonian cycles in triangulations with few separating triangles</i>, Journal of Graph Theory <b>87</b> (2), 2018, pp. 164-175 (<a href="http://dx.doi.org/10.1002/jgt.22149">DOI</a>).</li>
                 <li>C.E. Larson, N. Van Cleemput, <i>Automated Conjecturing I: Fajtlowicz's Dalmatian Heuristic Revisited (Extended Abstract)</i>, Proceedings of the 2017 International Joint Conference on Artificial Intelligence (IJCAI-17), Melbourne. </li>
