--- a/academic/index.html
+++ b/academic/index.html
@@ -89,7 +89,7 @@
         <div class="mdl-layout__tab-panel is-active" id="contact" style="padding-bottom: 48px;">
           <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp" style="max-width: 504px">
             <header class="section__play-btn mdl-cell mdl-cell--4-col-desktop mdl-cell--2-col-tablet mdl-cell--4-col-phone mdl-color--teal-100 mdl-color-text--white">
-              <img src="images/nvcleemp.jpg" width="168" height="240" border="0" alt="" style="padding:0px;">
+              <img src="images/nvcleemp.jpg" id="headshot" width="168" height="240" border="0" alt="" style="padding:0px;">
             </header>
             <div class="mdl-card mdl-cell mdl-cell--8-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone">
               <div class="mdl-card__supporting-text">
@@ -146,6 +146,9 @@ Students I supervised or co-supervised.
 <li>Pieter Goetschalckx (2014 - present)</li>
 <li>Thomas De Praetere, M.S. (2015 - 2016): <a href="http://lib.ugent.be/catalog/rug01:002272640" target="_blank">Drie-dimensionale symmetrische inbedding van grafen</a></li>
 <li>Karen Hilgert, M.S. (2016 - 2017): <a href="https://lib.ugent.be/en/catalog/rug01:002349869" target="_blank">Algoritmes voor het testen van printplaten</a></li>
+<li>Wouter Van Steenberge, M.S. (2018 - 2019): <a href="https://lib.ugent.be/nl/catalog/rug01:002790351" target="_blank">Restoring Pentagon Clusters in Goldberg Operations</a></li>
+<li>Seppe Bilcke, M.S. (2019 - 2020)</li>
+<li>Lars Lowie (2019 - present)</li>
 </ul>
 Students for whom I assisted the thesis.
 <ul>
@@ -164,6 +167,7 @@ Students for whom I assisted the thesis.
 <li>General (graph) generation algorithms</li>
 <li>Graph theory</li>
 <li>Hamiltonicity and related properties</li>
+<li>Plane and embedded graphs</li>
 </ul>
             </div>
           </section>
@@ -173,17 +177,20 @@ Students for whom I assisted the thesis.
             <div class="mdl-cell mdl-cell--12-col">
               <h4>Publications</h4>
               <ol reversed>
-                <li class="not-accepted">E. Van Nieuwenhuyse, T. Strisciuglio, G. Lorenzo, M. El Haddad, J. Goedgebeur, N. Van Cleemput, J. De Neve, A.V. Panfilov, S. Knecht, M. Duytschaever, N. Vandersickel, <i>Network theory as a novel way to analyze cardiac arrhythmias: accuracy of directed graph mapping in the in-silico model and clinical setting</i>, submitted.</li>
+                <li class="not-accepted">G. Brinkmann, N. Van Cleemput, <i>4-connected polyhedra have at least a linear number of hamiltonian cycles</i>, submitted.</li>
+                <li class="not-accepted">A. P. Burger, J. P. de Wet, M. Frick, N. Van Cleemput, C. T. Zamfirescu, <i>Planar Hypohamiltonian Oriented Graphs</i>, submitted.</li>
+                <li class="not-accepted">K. Coolsaet, P. Goetschalckx, N. Van Cleemput, <i>Local Orientation-Preserving Symmetry Preserving Operations on Polyhedra</i>, submitted.</li>
                 <li class="not-accepted">K. Coolsaet, P. Goetschalckx, N. Van Cleemput, <i>Generation of Local Symmetry-Preserving Operations on Polyhedra</i>, submitted.</li>
                 <li class="not-accepted">O.-H. S. Lo, J. M. Schmidt, N. Van Cleemput, C. T. Zamfirescu, <i>Shortness Coefficient of Cyclically 4-Edge-Connected Cubic Graphs</i>, submitted.</li>
                 <li class="not-accepted">A. Bradford, J. K. Day, L. Hutchinson,  B. Kaperick, C. E. Larson, M. Mills, D. Muncy,  N. Van Cleemput, <i>Automated Conjecturing II: Chomp and Reasoned Game Play</i>, submitted.</li>
-                <li class="not-accepted">J. Goedgebeur, K. Ozeki, N. Van Cleemput, G. Wiener, <i>On the minimum leaf number of cubic graphs</i>, submitted.</li>
                 <li class="not-accepted">N. Van Cleemput, <i>Generation of Delaney-Dress graphs</i>, submitted.</li>
-                <li>G. Brinkmann, K. Ozeki, N. Van Cleemput, <i>Types of triangle in plane Hamiltonian triangulations and applications to domination and k-walks</i>, to appear in Ars Mathematica Contemporanea.</li>
+                <li>N. Vandersickel, E. Van Nieuwenhuyse, N. Van Cleemput, J. Goedgebeur, M. El Haddad, J. De Neve, A. Demolder, T. Strisciuglio, M. Duytschaever and A.V. Panfilov, <i>Directed Networks as a Novel Way to Describe and Analyze Cardiac Excitation: Directed Graph Mapping</i>, Frontiers in Physiology, 10:1138, 14 pages, 2019 (<a href="https://doi.org/10.3389/fphys.2019.01138">DOI</a>).</li>
+                <li>J. Goedgebeur, K. Ozeki, N. Van Cleemput, G. Wiener, <i>On the minimum leaf number of cubic graphs</i>, Discrete Mathematics, 342(11):3000-3005, 2019 (<a href="https://arxiv.org/abs/1806.04451">arXiv</a> | <a href="https://doi.org/10.1016/j.disc.2019.06.005">DOI</a>).</li>
                 <li>N. Van Cleemput, <i>Hamiltonian-connectedness of triangulations with few separating triangles</i>, to appear in Contributions to Discrete Mathematics.</li>
-                <li>N. Van Cleemput, C. T. Zamfirescu, <i>Regular Non-Hamiltonian Polyhedral Graphs</i>, Applied Mathematics and Computation, 338, 2018, pp. 192-206.</li>
-                <li>K. Ozeki, N. Van Cleemput, C. T. Zamfirescu, <i>Hamiltonian properties in plane graphs with few 3-cuts - a survey</i>, Discrete Mathematics 341 (9), 2018, pp. 2646-2660.</li>
-                <li>L. Hutchinson, V. Kamat, C. E. Larson, S. Mehta, D. Muncy, and N. Van Cleemput, <i>Automated Conjecturing VI: Domination Number of Benzenoids</i>, MATCH Commun. Math. Comput. Chem., <b>80</b>(3), 2018, pp. 821-834.</li>
+                <li>G. Brinkmann, K. Ozeki, N. Van Cleemput, <i>Types of triangle in plane Hamiltonian triangulations and applications to domination and k-walks</i>, Ars Mathematica Contemporanea 17(1), 2019, pp. 51-66 (<a href="http://amc-journal.eu/index.php/amc/article/view/1733">link</a>).</li>
+                <li>N. Van Cleemput, C. T. Zamfirescu, <i>Regular Non-Hamiltonian Polyhedral Graphs</i>, Applied Mathematics and Computation, 338, 2018, pp. 192-206 (<a href="https://doi.org/10.1016/j.amc.2018.05.062">DOI</a>).</li>
+                <li>K. Ozeki, N. Van Cleemput, C. T. Zamfirescu, <i>Hamiltonian properties in plane graphs with few 3-cuts - a survey</i>, Discrete Mathematics 341 (9), 2018, pp. 2646-2660 (<a href="https://doi.org/10.1016/j.disc.2018.06.015">DOI</a>).</li>
+                <li>L. Hutchinson, V. Kamat, C. E. Larson, S. Mehta, D. Muncy, and N. Van Cleemput, <i>Automated Conjecturing VI: Domination Number of Benzenoids</i>, MATCH Commun. Math. Comput. Chem., <b>80</b>(3), 2018, pp. 821-834 (<a href="http://match.pmf.kg.ac.rs/electronic_versions/Match80/n3/match80n3_821-834.pdf">link</a>).</li>
                 <li>G. Brinkmann, J. Souffriau, N. Van Cleemput, <i>On the number of hamiltonian cycles in triangulations with few separating triangles</i>, Journal of Graph Theory <b>87</b> (2), 2018, pp. 164-175 (<a href="http://dx.doi.org/10.1002/jgt.22149">DOI</a>).</li>
                 <li>C.E. Larson, N. Van Cleemput, <i>Automated Conjecturing I: Fajtlowicz's Dalmatian Heuristic Revisited (Extended Abstract)</i>, Proceedings of the 2017 International Joint Conference on Artificial Intelligence (IJCAI-17), Melbourne. </li>
                 <li>C.E. Larson, N. Van Cleemput, <i>Automated Conjecturing III: Property-relations conjectures</i>, Annals of Mathematics and Artificial Intelligence, <b>81</b> (3), 2017, pp. 315-327 (<a href="http://dx.doi.org/10.1007/s10472-017-9559-5">DOI</a>).</li>
@@ -259,6 +266,9 @@ Students for whom I assisted the thesis.
     <li>CAAGT seminar (Ghent, Belgium, 28/04/2017): Type-0 triangles: <a href="docs/slides/caagt20170428.pdf" target="_blank">Slides</a>/<a href="docs/slides/caagt20170428_handouts.pdf" target="_blank">Handouts</a></li>
     <li>Computers in Scientific Discovery 8 (Mons, Belgium, 23-25/08/2017): Non-hamiltonian and non-traceable regular 3-connected planar graphs: <a href="docs/abstracts/CSD8.pdf" target="_blank">Abstract</a>/<a href="docs/slides/CSD8.pdf" target="_blank">Slides</a>/<a href="docs/slides/CSD8_handouts.pdf" target="_blank">Handouts</a></li>
     <li>Colloquium on Combinatorics (Paderborn, Germany, 24-25/11/2017): Non-hamiltonian and non-traceable regular 3-connected planar graphs: <a href="docs/abstracts/kolkom17.pdf" target="_blank">Abstract</a>/<a href="docs/slides/kolkom17.pdf" target="_blank">Slides</a>/<a href="docs/slides/kolkom17_handouts.pdf" target="_blank">Handouts</a></li>
+    <li>Bucharest Graph Theory Workshop 2018 (Bucharest, Roumania, 15-17/08/2018): Non-hamiltonian and non-traceable regular 3-connected planar graphs (invited talk): <a href="docs/abstracts/BGTW2018.pdf" target="_blank">Abstract</a>/<a href="docs/slides/BGTW2018.pdf" target="_blank">Slides</a>/<a href="docs/slides/BGTW2018_handouts.pdf" target="_blank">Handouts</a></li>
+    <li>Colloquium on Combinatorics (Paderborn, Germany, 23-24/11/2018): Shortness coefficient of cyclically 4-edge-connected cubic graphs: <a href="docs/abstracts/kolkom18.pdf" target="_blank">Abstract</a>/<a href="docs/slides/kolkom18.pdf" target="_blank">Slides</a>/<a href="docs/slides/kolkom18_handouts.pdf" target="_blank">Handouts</a></li>
+    <li>10th Workshop on the Matthews-Sumner Conjecture and related Problems (Pilsen, Czech Republic, 14-19/04/2019): Shortness coefficient of cyclically 4-edge-connected cubic graphs: <a href="docs/abstracts/plzen19.pdf" target="_blank">Abstract</a>/<a href="docs/slides/plzen19.pdf" target="_blank">Slides</a>/<a href="docs/slides/plzen19_handouts.pdf" target="_blank">Handouts</a></li>
 </ul>
             </div>
             <div class="mdl-cell mdl-cell--12-col">
@@ -292,7 +302,8 @@ Students for whom I assisted the thesis.
             <div class="mdl-cell mdl-cell--12-col">
               <h4>Organised conferences</h4>
               <ul>
-                <li><a href="http://www.ggtw.ugent.be" target="_new">Ghent Graph Theory Workshop on Structure and Algorithms 2017</a> (Ghent, Belgium, 16/08/2017 - 18/08/2017)</li>
+                <li><a href="http://www.ggtw.ugent.be/2017" target="_new">Ghent Graph Theory Workshop on Structure and Algorithms 2017</a> (together with Jan Goedgebeur and Carol T. Zamfirescu) (Ghent, Belgium, 16/08/2017 - 18/08/2017)</li>
+                <li><a href="http://www.ggtw.ugent.be" target="_new">Ghent Graph Theory Workshop on Structure and Algorithms 2019</a> (together with Jan Goedgebeur and Carol T. Zamfirescu) (Ghent, Belgium, 12/08/2019 - 14/08/2019)</li>
               </ul>
             </div>
         <div class="mdl-cell mdl-cell--12-col">
@@ -303,6 +314,8 @@ Students for whom I assisted the thesis.
               <li>visit to VCU to work with Craig Larson (Richmond, VA, United States, 25/03/2016 - 15/03/2016)</li>
               <li>visit to UCLA to work with Stan Schein (Los Angeles, CA, United States, 19/01/2017 - 27/01/2017)</li>
               <li>visit to VCU to work with Craig Larson (Richmond, VA, United States, 03/09/2017 - 14/09/2017)</li>
+              <li>visit to UCLA to work with Stan Schein (Los Angeles, CA, United States, 05/04/2018 - 18/04/2018)</li>
+              <li>Salt Rock workshop to work on planar hypohamiltonian oriented graphs (Salt Rock, South-Africa, 26/01/2019 - 05/02/2019)</li>
           </ul>
         </div>
           </section>
@@ -369,5 +382,19 @@ Students for whom I assisted the thesis.
       </main>
     </div>
     <script src="https://code.getmdl.io/1.2.1/material.min.js"></script>
+    <script type = "text/javascript">
+            var image = document.getElementById("headshot");
+            var currentPos = 0;
+            var images = ["images/nvcleemp.jpg", "images/nvcleemp_oud.jpg"]
+
+            function next_picture() {
+                if (++currentPos >= images.length)
+                    currentPos = 0;
+
+                image.src = images[currentPos];
+            }
+
+            setInterval(next_picture, 8000);
+        </script>
   </body>
 </html>
