Updated list of publications

--- a/academic/index.html
+++ b/academic/index.html
@@ -177,16 +177,18 @@ Students for whom I assisted the thesis.
             <div class="mdl-cell mdl-cell--12-col">
               <h4>Publications</h4>
               <ol reversed>
+                <li class="not-accepted">O.-H. S. Lo, J. M. Schmidt, N. Van Cleemput, C. T. Zamfirescu, <i>Shortness parameters of polyhedral graphs with few distinct vertex degrees</i>, submitted.</li>
+                <li class="not-accepted">I. Fabrici, M. Timkov, T. Madaras, N. Van Cleemput, C. T. Zamfirescu, <i>Non-hamiltonian graphs in which every edge-contracted subgraph is hamiltonian</i>, submitted.</li>
                 <li class="not-accepted">G. Brinkmann, N. Van Cleemput, <i>4-connected polyhedra have at least a linear number of hamiltonian cycles</i>, submitted.</li>
                 <li class="not-accepted">A. P. Burger, J. P. de Wet, M. Frick, N. Van Cleemput, C. T. Zamfirescu, <i>Planar Hypohamiltonian Oriented Graphs</i>, submitted.</li>
                 <li class="not-accepted">K. Coolsaet, P. Goetschalckx, N. Van Cleemput, <i>Local Orientation-Preserving Symmetry Preserving Operations on Polyhedra</i>, submitted.</li>
-                <li class="not-accepted">K. Coolsaet, P. Goetschalckx, N. Van Cleemput, <i>Generation of Local Symmetry-Preserving Operations on Polyhedra</i>, submitted.</li>
-                <li class="not-accepted">O.-H. S. Lo, J. M. Schmidt, N. Van Cleemput, C. T. Zamfirescu, <i>Shortness Coefficient of Cyclically 4-Edge-Connected Cubic Graphs</i>, submitted.</li>
                 <li class="not-accepted">A. Bradford, J. K. Day, L. Hutchinson,  B. Kaperick, C. E. Larson, M. Mills, D. Muncy,  N. Van Cleemput, <i>Automated Conjecturing II: Chomp and Reasoned Game Play</i>, submitted.</li>
                 <li class="not-accepted">N. Van Cleemput, <i>Generation of Delaney-Dress graphs</i>, submitted.</li>
+                <li>P. Goetschalckx, N. Van Cleemput, K. Coolsaet, <i>Generation of Local Symmetry-Preserving Operations on Polyhedra</i>, to appear in Ars Mathematica Contemporanea.</li>
+                <li>O.-H. S. Lo, J. M. Schmidt, N. Van Cleemput, C. T. Zamfirescu, <i>Shortness Coefficient of Cyclically 4-Edge-Connected Cubic Graphs</i>, The Electronic Journal of Combinatorics 27, Iss. 1 (2020) Article Number P1.43.</li>
                 <li>N. Vandersickel, E. Van Nieuwenhuyse, N. Van Cleemput, J. Goedgebeur, M. El Haddad, J. De Neve, A. Demolder, T. Strisciuglio, M. Duytschaever and A.V. Panfilov, <i>Directed Networks as a Novel Way to Describe and Analyze Cardiac Excitation: Directed Graph Mapping</i>, Frontiers in Physiology, 10:1138, 14 pages, 2019 (<a href="https://doi.org/10.3389/fphys.2019.01138">DOI</a>).</li>
                 <li>J. Goedgebeur, K. Ozeki, N. Van Cleemput, G. Wiener, <i>On the minimum leaf number of cubic graphs</i>, Discrete Mathematics, 342(11):3000-3005, 2019 (<a href="https://arxiv.org/abs/1806.04451">arXiv</a> | <a href="https://doi.org/10.1016/j.disc.2019.06.005">DOI</a>).</li>
-                <li>N. Van Cleemput, <i>Hamiltonian-connectedness of triangulations with few separating triangles</i>, to appear in Contributions to Discrete Mathematics.</li>
+                <li>N. Van Cleemput, <i>Hamiltonian-connectedness of triangulations with few separating triangles</i>, Contributions to Discrete Mathematics, 14 (1), 2019, pp. 71-79 (<a href="https://cdm.ucalgary.ca/article/view/62582">link</a> | <a href="https://doi.org/10.11575/cdm.v14i1.62582">DOI</a>).</li>
                 <li>G. Brinkmann, K. Ozeki, N. Van Cleemput, <i>Types of triangle in plane Hamiltonian triangulations and applications to domination and k-walks</i>, Ars Mathematica Contemporanea 17(1), 2019, pp. 51-66 (<a href="http://amc-journal.eu/index.php/amc/article/view/1733">link</a>).</li>
                 <li>N. Van Cleemput, C. T. Zamfirescu, <i>Regular Non-Hamiltonian Polyhedral Graphs</i>, Applied Mathematics and Computation, 338, 2018, pp. 192-206 (<a href="https://doi.org/10.1016/j.amc.2018.05.062">DOI</a>).</li>
                 <li>K. Ozeki, N. Van Cleemput, C. T. Zamfirescu, <i>Hamiltonian properties in plane graphs with few 3-cuts - a survey</i>, Discrete Mathematics 341 (9), 2018, pp. 2646-2660 (<a href="https://doi.org/10.1016/j.disc.2018.06.015">DOI</a>).</li>
