Updated list of talks and research visits

--- a/academic/index.html
+++ b/academic/index.html
@@ -271,6 +271,9 @@ Students for whom I assisted the thesis.
     <li>Bucharest Graph Theory Workshop 2018 (Bucharest, Roumania, 15-17/08/2018): Non-hamiltonian and non-traceable regular 3-connected planar graphs (invited talk): <a href="docs/abstracts/BGTW2018.pdf" target="_blank">Abstract</a>/<a href="docs/slides/BGTW2018.pdf" target="_blank">Slides</a>/<a href="docs/slides/BGTW2018_handouts.pdf" target="_blank">Handouts</a></li>
     <li>Colloquium on Combinatorics (Paderborn, Germany, 23-24/11/2018): Shortness coefficient of cyclically 4-edge-connected cubic graphs: <a href="docs/abstracts/kolkom18.pdf" target="_blank">Abstract</a>/<a href="docs/slides/kolkom18.pdf" target="_blank">Slides</a>/<a href="docs/slides/kolkom18_handouts.pdf" target="_blank">Handouts</a></li>
     <li>10th Workshop on the Matthews-Sumner Conjecture and related Problems (Pilsen, Czech Republic, 14-19/04/2019): Shortness coefficient of cyclically 4-edge-connected cubic graphs: <a href="docs/abstracts/plzen19.pdf" target="_blank">Abstract</a>/<a href="docs/slides/plzen19.pdf" target="_blank">Slides</a>/<a href="docs/slides/plzen19_handouts.pdf" target="_blank">Handouts</a></li>
+    <li>Colloquium on Combinatorics (Paderborn, Germany, 20-21/11/2019): 4-connected polyhedra have at least a linear number of hamiltonian cycles: <a href="docs/abstracts/kolkom19.pdf" target="_blank">Abstract</a>/<a href="docs/slides/kolkom19.pdf" target="_blank">Slides</a>/<a href="docs/slides/kolkom19_handouts.pdf" target="_blank">Handouts</a></li>
+    <li>CAAGT seminar (Ghent, Belgium, 28/10/2019): Hamiltonian cycles and 1-factors in 5-regular graphs (black board talk)</li>
+    <li>CAAGT seminar (Ghent, Belgium, 17/01/2020): 10-Gabriel graphs are hamiltonian (black board talk)</li>
 </ul>
             </div>
             <div class="mdl-cell mdl-cell--12-col">
@@ -318,6 +321,7 @@ Students for whom I assisted the thesis.
               <li>visit to VCU to work with Craig Larson (Richmond, VA, United States, 03/09/2017 - 14/09/2017)</li>
               <li>visit to UCLA to work with Stan Schein (Los Angeles, CA, United States, 05/04/2018 - 18/04/2018)</li>
               <li>Salt Rock workshop to work on planar hypohamiltonian oriented graphs (Salt Rock, South-Africa, 26/01/2019 - 05/02/2019)</li>
+              <li>visit to GERAD to work with Gilles Caporossi and Eglantine Camby (Montr&eacute;al, Canada, 19/08/2019 - 25/08/2019)</li>
           </ul>
         </div>
           </section>
