Completed student section

--- a/academic/index.html
+++ b/academic/index.html
@@ -146,8 +146,11 @@ Students I supervised or co-supervised.
 <li>Pieter Goetschalckx (2014 - present)</li>
 <li>Thomas De Praetere, M.S. (2015 - 2016): <a href="http://lib.ugent.be/catalog/rug01:002272640" target="_blank">Drie-dimensionale symmetrische inbedding van grafen</a></li>
 <li>Karen Hilgert, M.S. (2016 - 2017): <a href="https://lib.ugent.be/en/catalog/rug01:002349869" target="_blank">Algoritmes voor het testen van printplaten</a></li>
+<li>Emiel Ergo, M.S. (2016 - 2017): <a href="https://lib.ugent.be/en/catalog/rug01:002349874" target="_blank">Nanocaps uit fullerenen</a></li>
 <li>Wouter Van Steenberge, M.S. (2018 - 2019): <a href="https://lib.ugent.be/nl/catalog/rug01:002790351" target="_blank">Restoring Pentagon Clusters in Goldberg Operations</a></li>
 <li>Seppe Bilcke, M.S. (2019 - 2020)</li>
+<li>Heidi Van den Camp, M.S. (2019 - 2020)</li>
+<li>Thibaut Vermeulen, M.S. (2019 - 2020)</li>
 <li>Lars Lowie (2019 - present)</li>
 </ul>
 Students for whom I assisted the thesis.
