--- a/academic/index.html
+++ b/academic/index.html
@@ -143,12 +143,13 @@
 <h4>Thesis students</h4>
 Students I supervised or co-supervised.
 <ul>
-<li>Pieter Goetschalckx (2014 - present)</li>
+<li>Pieter Goetschalckx (2014 - 2020)</li>
 <li>Thomas De Praetere, M.S. (2015 - 2016): <a href="http://lib.ugent.be/catalog/rug01:002272640" target="_blank">Drie-dimensionale symmetrische inbedding van grafen</a></li>
 <li>Karen Hilgert, M.S. (2016 - 2017): <a href="https://lib.ugent.be/en/catalog/rug01:002349869" target="_blank">Algoritmes voor het testen van printplaten</a></li>
 <li>Emiel Ergo, M.S. (2016 - 2017): <a href="https://lib.ugent.be/en/catalog/rug01:002349874" target="_blank">Nanocaps uit fullerenen</a></li>
+<li>Simon Van den Eynde, M.S. (2017 - 2018): Boundary length of patches with faces of size at most six</li>
 <li>Wouter Van Steenberge, M.S. (2018 - 2019): <a href="https://lib.ugent.be/nl/catalog/rug01:002790351" target="_blank">Restoring Pentagon Clusters in Goldberg Operations</a></li>
-<li>Seppe Bilcke, M.S. (2019 - 2020)</li>
+<li>Seppe Bilcke, M.S. (2019 - 2021)</li>
 <li>Heidi Van den Camp, M.S. (2019 - 2020)</li>
 <li>Thibaut Vermeulen, M.S. (2019 - 2020)</li>
 <li>Lars Lowie (2019 - present)</li>
@@ -180,13 +181,19 @@ Students for whom I assisted the thesis.
             <div class="mdl-cell mdl-cell--12-col">
               <h4>Publications</h4>
               <ol reversed>
+                <li class="not-accepted">G. Brinkmann, T. Tucker, N. Van Cleemput, <i>On the genera of polyhedral embeddings of cubic graphs</i>, submitted.</li>
+                <li class="not-accepted">P. Brooks, D. Edwards, C.E. Larson, and N. Van Cleemput, <i>Conjecturing-Based Computational Discovery of Patterns in Data</i>, <a href="https://arxiv.org/abs/2011.11576">arXiv preprint</a>, submitted.</li>
+                <li class="not-accepted">N. Van Cleemput, C. T. Zamfirescu, <i>Hamiltonian cycles and 1-factors in 5-regular graphs</i>, <a href="http://arxiv.org/abs/2008.03173">arXiv preprint</a>, submitted.</li>
                 <li class="not-accepted">O.-H. S. Lo, J. M. Schmidt, N. Van Cleemput, C. T. Zamfirescu, <i>Shortness parameters of polyhedral graphs with few distinct vertex degrees</i>, submitted.</li>
                 <li class="not-accepted">I. Fabrici, M. Timkov, T. Madaras, N. Van Cleemput, C. T. Zamfirescu, <i>Non-hamiltonian graphs in which every edge-contracted subgraph is hamiltonian</i>, submitted.</li>
-                <li class="not-accepted">G. Brinkmann, N. Van Cleemput, <i>4-connected polyhedra have at least a linear number of hamiltonian cycles</i>, submitted.</li>
-                <li class="not-accepted">A. P. Burger, J. P. de Wet, M. Frick, N. Van Cleemput, C. T. Zamfirescu, <i>Planar Hypohamiltonian Oriented Graphs</i>, submitted.</li>
-                <li class="not-accepted">K. Coolsaet, P. Goetschalckx, N. Van Cleemput, <i>Local Orientation-Preserving Symmetry Preserving Operations on Polyhedra</i>, submitted.</li>
                 <li class="not-accepted">N. Van Cleemput, <i>Generation of Delaney-Dress graphs</i>, submitted.</li>
-                <li>P. Goetschalckx, N. Van Cleemput, K. Coolsaet, <i>Generation of Local Symmetry-Preserving Operations on Polyhedra</i>, to appear in Ars Mathematica Contemporanea.</li>
+                <li class="not-accepted">N. Bushaw, J. Chen, H. LaFayette, C. E. Larson, N. Van Cleemput, Conjectured Bounds for the Independence Number of a Graph, submitted.</li>
+                <li class="not-accepted">P. Brooks, D. Edwards, C.E. Larson, and N. Van Cleemput, Automated Conjecturing IV: Scientific Discovery and Classification, submitted. </li>
+                <li class="not-accepted">N. Bushaw, C.E. Larson, N. Van Cleemput, Automated Conjectures for Graph Hamiltonicity, submitted.</li>
+                <li>G. Brinkmann, N. Van Cleemput, <i>4-connected polyhedra have at least a linear number of hamiltonian cycles</i>, to appear in European Journal of Combinatorics.</li>
+                <li>A. P. Burger, J. P. de Wet, M. Frick, N. Van Cleemput, C. T. Zamfirescu, <i>Planar Hypohamiltonian Oriented Graphs</i>, to appear in Journal of Graph Theory.</li>
+                <li>K. Coolsaet, P. Goetschalckx, N. Van Cleemput, <i>Local Orientation-Preserving Symmetry Preserving Operations on Polyhedra</i>, Discrete Mathematics, 344(1), 2021 (<a href="https://doi.org/10.1016/j.disc.2020.112156">DOI</a>).</li>
+                <li>P. Goetschalckx, N. Van Cleemput, K. Coolsaet, <i>Generation of Local Symmetry-Preserving Operations on Polyhedra</i>, Ars Mathematica Contemporanea <b>18</b> (2), 2020, pp. 223-239 (<a href="https://amc-journal.eu/index.php/amc/article/view/1931">link</a>/<a href="https://doi.org/10.26493/1855-3974.1931.9cf">DOI</a>).</li>
                 <li>A. Bradford, J. K. Day, L. Hutchinson,  B. Kaperick, C. E. Larson, M. Mills, D. Muncy,  N. Van Cleemput, <i>Automated Conjecturing II: Chomp and Reasoned Game Play</i>, Journal of Artificial Intelligence Research (JAIR) 68, 2020, pp. 447-461 (<a href="https://doi.org/10.1613/jair.1.12188">DOI</a>).</li>
                 <li>O.-H. S. Lo, J. M. Schmidt, N. Van Cleemput, C. T. Zamfirescu, <i>Shortness Coefficient of Cyclically 4-Edge-Connected Cubic Graphs</i>, The Electronic Journal of Combinatorics 27, Iss. 1 (2020) Article Number P1.43.</li>
                 <li>N. Vandersickel, E. Van Nieuwenhuyse, N. Van Cleemput, J. Goedgebeur, M. El Haddad, J. De Neve, A. Demolder, T. Strisciuglio, M. Duytschaever and A.V. Panfilov, <i>Directed Networks as a Novel Way to Describe and Analyze Cardiac Excitation: Directed Graph Mapping</i>, Frontiers in Physiology, 10:1138, 14 pages, 2019 (<a href="https://doi.org/10.3389/fphys.2019.01138">DOI</a>).</li>
