--- a/academic/index.html
+++ b/academic/index.html
@@ -123,7 +123,7 @@
 	<li>August 2006 - September 2007 : co-worker of <a href="http://www.grinvin.org" target="_new">GrInvIn</a>-project at Ghent University</li>
 	<li>October 2007 - September 2013: Research assistent at Ghent University</li>
 	<li>November 2013 - December 2014: Research Assistant (postdoc) at University of West Bohemia</li>
-	<li>September 2014 - present: Post-doctoral assistant at Ghent University</li>
+	<li>September 2014 - September 2020: Post-doctoral assistant at Ghent University</li>
 </ul>
 
 <h4>Teaching</h4>
@@ -135,8 +135,8 @@
   <li><b>Programming</b> (Python) (exercises for the bachelors biochemistry/biotechnology, chemistry, geology and geography) (2011 - 2013)</li>
   <li><b>Programming (I)</b> (Java) (exercises for the bachelors computer science, mathematics and physics) (2014 - 2015) </li>
   <li><b>Analysis I</b> (for the bachelors computer science) (2015 - 2016)</li>
-  <li><b>Algorithms and Data-structures 2</b> (exercises for the bachelors computer science) (2015 - present) </li>
-  <li><b>Calculus</b> (for the bachelors computer science) (2017 - present)</li>
+  <li><b>Algorithms and Data-structures 2</b> (exercises for the bachelors computer science) (2015 - 2020) </li>
+  <li><b>Calculus</b> (for the bachelors computer science) (2017 - 2020)</li>
   <li><b>Structure generation</b>: a four-part course on structure generation taught at University of West-Bohemia during 2014-2015.</li>
 </ul>
 
